# mcp-servers

./: .env.example  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
examples/: .env.example  run_brave_search_agent.py  run_filesystem_agent.py  run_filesystem_agent_2.py  run_searxng_search_agent.py  utils.py
examples/cli_usage/: run.py  run_brave_search_agent.py  run_filesystem_agent.py  run_searxng_search_agent.py  run_tavily_search_agent.py
examples/package_usage/: run.py  run_all_agent.py  run_brave_search_agent.py  run_filesystem_agent.py  run_searxng_search_agent.py  run_tavily_search_agent.py
mcp_servers/: __init__.py  base.py  brave.py  brave_search.py  cli_app.py  filesystem.py  searxng.py  searxng_search.py  tavily.py  tavily_search.py
