[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_servers"
version = "0.1.0"
authors = [
    { name = "Sercan Sagman", email = "sercan@sagmans.com" }
]
description = "Simple MCP Server Collection, Packaged"
readme = "README.md"
requires-python = ">=3.12,<3.14"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic-ai~=0.2.4",
    "python-daemon"
]

[project.scripts]
mcpserver = "cli:app"

[project.urls]
"Source" = "https://github.com/assagman/mcp_servers"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
lint.ignore = ["E501"]  # Ignore line length for now, adjust as needed

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true  # Useful for third-party libraries like pydantic-ai

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=mcp_servers --cov-report=term-missing"
testpaths = ["tests"]
